# m2a_teste_vaga_jr

./: .gitignore  README.md  Teste de Programação - Nível Junior.md  manage.py  pyproject.toml  requirements.txt
src/posto_abc/: asgi.py  settings.py  urls.py  wsgi.py
src/posto_abc/app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/posto_abc/app/fixtures/: sample.yaml
src/posto_abc/app/migrations/: 0001_initial.py
src/posto_abc/app/services/: servico_abastecimento.py
src/posto_abc/app/templates/: index.html  relatorio.html
