[project]
name = "m2a-teste-vaga-jr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Juan Monteiro", email = "juan.monteiro@jmonteiro.net" }
]
dependencies = [
    "django>=5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "pyyaml>=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/posto_abc"]
